<resources>
    <string name="app_name">FigureApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shopping_cart_icon_description">Mô tả cho biểu tượng giỏ hàng</string>
    <string name="home_icon_description">Mô tả cho biểu tượng home</string>
    <string name="profile_icon_description">Mô tả cho biểu tượng profile</string>
    <string name="home_button_description">về lại trang chủ</string>
    <string name="follow_button_description">Các sản phẩm đã được theo dõi</string>
    <string name="settings_button_description">Vào trang settings</string>
    <string name="dashboard_button_description">Dashboard</string>
    <string name="cart_button_description">về lại trang chủ</string>

</resources>