<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBaseline_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="parent"
    android:id="@+id/bottomAppBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:theme="@style/Animation.Design.BottomSheetDialog"
            app:backgroundTint="@color/white"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="16dp"
            app:hideOnScroll="true"
            tools:ignore="BottomAppBar">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cart_button_description"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:maxImageSize="32dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/dashboard_button_description"
                android:src="@drawable/ic_dashboard"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:maxImageSize="30dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/settings_button_description"
                android:src="@drawable/ic_settings"
                app:backgroundTint="@color/white"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:maxImageSize="32dp"

                app:tint="@color/black" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_follow"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/follow_button_description"
                android:src="@drawable/ic_follow"
                android:tint="@color/white"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:maxImageSize="32dp"
                app:rippleColor="@color/white"
                app:shapeAppearanceOverlay="@style/Theme.FigureApp" />

        </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/home_icon_description"
        android:src="@drawable/ic_home"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/bottombar"
        app:maxImageSize="38dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
